Fixed brand font line spacing on mobile

--- a/styles/pages/explore.scss
+++ b/styles/pages/explore.scss
@@ -119,7 +119,7 @@
 
 .map-more a {
   color: #af5e31;
-  margin-right: 5%;
+  margin-right: 2%;
 
   a:hover {
     color: #5f331b;
